fix vertical align Button_icon_only

--- a/src/components/UI/Button/_icon/Button_icon_only.post.css
+++ b/src/components/UI/Button/_icon/Button_icon_only.post.css
@@ -3,4 +3,5 @@
   padding: 0;
   display: inline-flex;
   justify-content: center;
+  align-items: center;
 }
